--- a/joice-service/.settings/org.eclipse.wst.common.component
+++ b/joice-service/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="joice-facade-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/joice-facade/joice-facade">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="joice-common-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/joice-common/joice-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
