--- a/joice-schedule-admin/.settings/org.eclipse.wst.common.component
+++ b/joice-schedule-admin/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,13 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="joice-common-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/joice-common/joice-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="joice-schedule-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/joice-schedule/joice-schedule">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="joice-schedule-admin"/>
         <property name="java-output-path" value="/joice-schedule-admin/target/classes"/>
     </wb-module>
